avoid warning: java.lang.System::load has been called by org.duckdb.DuckDBNative